fixed bg image not align: deleted w-100 width and height added w-100 object fit: cover

--- a/css/main.css
+++ b/css/main.css
@@ -33,10 +33,10 @@ h5 {
 
 .top_container-fluid, .top_carousel, .carousel-inner, .carousel-item, .w-100 {
   height: 100vh;
+  width: 100vw;
 }
 .w-100 {
-  height: 2000px;
-  width: 3000px!important;
+  object-fit: cover;
 }
 
 
@@ -101,10 +101,11 @@ h5 {
 
 @keyframes zoomout {
   0% {
-    transform: scale(1.2);
+    transform: scale(1.5);
   }
 }
 
 .carousel-item img {
-  animation: zoomout 12s;
+  object-fit: cover;
+  animation: 25s zoomout;
 }
